# dd2-height-alarm

./: Cargo.toml  alerts.txt  build.rs  build.sh  flake.nix
.cargo/: config.toml
src/: app.rs  main.rs  play_sound.rs  players.rs  sounds.rs
