[package]
name = "dd2-height-alarm"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.27.2", features = ["persistence", "default_fonts", "x11", "wgpu"], default-features = false }
egui = { version = "0.27.2", features = ["persistence", "serde"] }
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json", "gzip"] }
rodio = "0.18.1"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
simple-easing = "1.0.1"

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
strip = true # Strip symbols from binary*
